--- a/seng438-a3-1.md
+++ b/seng438-a3-1.md
@@ -92,3 +92,68 @@ Possibly the only very slight concern was setting up the project, we initially h
 
 Although, this assignment has been a smoother process compared to previous ones and we are highly satisfied with it. 
 
+# Appendix
+
+<img src="figures/figure1.png" alt="figures/figure1.png" width="360"/>
+
+**Figure 1 - Data flow graph for Range.combine method**
+
+<img src="figures/figure2.png" alt="figures/figure2.png" width="360"/>
+
+**Figure 2 - Def-use sets for Range.combine method**
+
+<img src="figures/figure3.png" alt="figures/figure3.png" width="360"/>
+
+**Figure 3 - Test cases for Range.combine method**
+
+<img src="figures/figure4.png" alt="figures/figure4.png" width="360"/>
+
+**Figure 4 - DU-pairs for Range.combine method**
+
+<img src="figures/figure5.png" alt="figures/figure5.png" width="360"/>
+
+**Figure 5 - Data flow graph for DataUtilities.calculateColumnTotal method**
+
+<img src="figures/figure6.png" alt="figures/figure6.png" width="360"/>
+
+**Figure 6 - Def-use sets for DataUtilities.calculateColumnTotal method**
+
+<img src="figures/figure7.png" alt="figures/figure7.png" width="360"/>
+
+**Figure 7 - Test cases for DataUtilities.calculateColumnTotal method**
+
+<img src="figures/figure8.png" alt="figures/figure8.png" width="360"/>
+
+**Figure 8 - DU-pairs for DataUtilities.calculateColumnTotal method**
+
+<img src="figures/figure13.png" alt="figures/figure13.png" width="360"/>
+
+**Figure 13 - Statement coverage in assignment 2 for Range.combine method**
+
+<img src="figures/figure14.png" alt="figures/figure14.png" width="360"/>
+
+**Figure 14 - Branch coverage in assignment 2 for Range.combine method**
+
+<img src="figures/figure15.png" alt="figures/figure15.png" width="360"/>
+
+**Figure 15 - Statement coverage in assignment 2 calculateColumnTotal method**
+
+<img src="figures/figure16.png" alt="figures/figure16.png" width="360"/>
+
+**Figure 16 - Branch coverage in assignment 2 calculateColumnTotal method**
+
+<img src="figures/figure17.png" alt="figures/figure17.png" width="360"/>
+
+**Figure 17 - Method coverage in assignment 2 for datautils**
+
+<img src="figures/figure18.png" alt="figures/figure18.png" width="360"/>
+
+**Figure 18 - Method coverage in assignment 3 for datautils**
+
+<img src="figures/figure19.png" alt="figures/figure19.png" width="360"/>
+
+**Figure 19 - Method coverage in assignment 2 for range**
+
+<img src="figures/figure20.png" alt="figures/figure20.png" width="360"/>
+
+**Figure 20 - Method coverage in assignment 3 for range**
